# expense-tracker

./: .env.example  .gitignore  .prettierignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  budget.py  category.py  expense.py  refresh_token.py  user.py
backend/tests/: test_health.py
frontend/miniapp/: package.json  project.config.json  tsconfig.json
frontend/miniapp/config/: index.js
frontend/miniapp/src/: app.config.js
frontend/miniapp/src/pages/account/: index.jsx
frontend/miniapp/src/pages/add-expense/: index.jsx
frontend/miniapp/src/pages/budgets/: index.jsx
frontend/miniapp/src/pages/expenses/: index.jsx
frontend/miniapp/src/pages/home/: index.jsx
frontend/miniapp/src/pages/login/: index.jsx
frontend/miniapp/src/pages/register/: index.jsx
frontend/miniapp/src/services/: api.js
frontend/web/: package.json  vite.config.ts
frontend/web/src/: App.tsx
frontend/web/src/components/: ProtectedRoute.tsx
frontend/web/src/contexts/: AuthContext.tsx
frontend/web/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/web/src/lib/: api.ts
frontend/web/src/pages/: BudgetsPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  ExpensesPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx
openspec/changes/init-full-stack/: design.md  proposal.md  tasks.md
openspec/changes/init-full-stack/specs/budget-management/: spec.md
(+6 files in other folders)
